k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: homework
  labels:
    app.kubernetes.io/name: frontend
spec:
  replicas: 2
  revisionHistoryLimit: 3

  selector:
    matchLabels:
      app.kubernetes.io/name: frontend

  template:
    metadata:
      labels:
        app.kubernetes.io/name: frontend

    spec:
      automountServiceAccountToken: false

      securityContext:
        seccompProfile:
          type: RuntimeDefault

      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: frontend

      containers:
        - name: frontend
          image: ghcr.io/pavelpodrezov1/k8s-homework-frontend:v1
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 8080

          volumeMounts:
            - name: frontend-config
              mountPath: /usr/share/nginx/html/config.js
              subPath: config.js
              readOnly: true

          startupProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 3
            timeoutSeconds: 2
            failureThreshold: 20

          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 150m
              memory: 128Mi

          securityContext:
            runAsNonRoot: true
            runAsUser: 101
            runAsGroup: 101
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL

      volumes:
        - name: frontend-config
          configMap:
            name: frontend-config
